@startuml

title __FM's Class Diagram__\n

  namespace fm {
    class fm.NJSlotProgressive {
        + NJSlotProgressive()
        ~ ship()
    }
  }
  

  namespace fm {
    class fm.NJSlotStore {
        # makeSlot()
    }
  }
  

  namespace fm {
    class fm.NVSlotProgressive {
        + NVSlotProgressive()
    }
  }
  

  namespace fm {
    class fm.NVSlotStore {
        # makeSlot()
    }
  }
  

  namespace fm {
    abstract class fm.Slot {
        ~ components : ArrayList
        ~ cost : float
        ~ name : String
        ~ software : String
        + cost()
        + getName()
        ~ assembleParts()
        ~ collectParts()
        ~ ship()
        ~ test()
        ~ uploadSoftware()
    }
  }
  

  namespace fm {
    abstract class fm.SlotStore {
        + orderSlot()
        {abstract} # makeSlot()
    }
  }
  

  namespace fm {
    class fm.TestSlots {
        {static} + main()
    }
  }
  

  namespace fm {
    enum slottype {
      bonus
      progressive
      straight
    }
  }
  

  fm.NJSlotProgressive -up-|> fm.Slot
  fm.NJSlotStore -up-|> fm.SlotStore
  fm.NVSlotProgressive -up-|> fm.Slot
  fm.NVSlotStore -up-|> fm.SlotStore


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
